Avoid copying buffer twice

Summary:
Previously we copied frames first to a temporary QImage and then to PipeWire buffer. This shouldn't be
necessary as we can copy frames directly to PipeWire buffers which should be much more effecient.

BUG: 419209

Reviewers: #plasma, zzag

Reviewed By: #plasma, zzag

Subscribers: meven, zzag, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D28272